@@ -1,6 +1,8 @@
 git-annex (5.20150813) UNRELEASED; urgency=medium
 
   * --debug log messages are now timestamped with fractional seconds.
+  * Sped up downloads of files from ssh remotes, reducing the
+    non-data-transfer overhead 6x.
 
  -- Joey Hess <id@joeyh.name>  Wed, 12 Aug 2015 14:31:01 -0400
 
